# dialog-emotions-models

./: .gitignore  README.md  pyproject.toml
data/: result.json
docs/: CALIBRATION.md  CALIBRATION_OBJECTIVE.md  PROJECT_HISTORY.md  RESEARCH_NOTES.md
scripts/: bake_temperatures.py  calibrate_combined.py  calibrate_objective_comparison.py  calibrate_temperature.py  cross_domain.py  domain_adaptation.py  error_analysis.py  evaluate_heavy_models.py  evaluate_ru_go_emotions.py  extra_baselines.py  full_leaderboard.py  improve_weak_models.py  learning_curve.py  plot_objective_comparison.py  plot_reliability.py  save_all_models.py  tune_combined.py  tune_light_models.py
src/dialog_emo_models/: __init__.py  checkpoints.py  cli.py  datasets.py  metrics.py  pipeline.py  registry.py  schema.py  telegram.py  text.py  training.py
src/dialog_emo_models/models/: __init__.py  base.py  baselines.py  calibrated.py  dummy.py  fasttext.py  goemotions.py  lexicon.py  sklearn_baselines.py  sklearn_extra.py  transformer.py
tests/: test_baselines.py  test_calibration.py  test_checkpoints.py  test_cli.py  test_fasttext.py  test_goemotions.py  test_lexicon.py  test_metrics.py  test_pipeline.py  test_schema.py  test_sklearn_extra.py  test_telegram.py  test_training.py  test_transformer.py
