[project]
name = "dialog-emo-models"
version = "0.1.0"
description = "Training and scoring pipeline contracts for dialogue emotion models"
readme = "README.md"
authors = [
    { name = "Mike", email = "michel200212345+github@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=1.26,<3",
    "pandas>=2.3,<3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]

[project.scripts]
dialog-emo = "dialog_emo_models.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
